--- a/test04/03/in/hw0403_01.in
+++ b/test04/03/in/hw0403_01.in
@@ -1,4 +1,5 @@
 #include <stdint.h>
+#pragma once
 #define STUDENT_NUMBER (100)
 #define CHINESE (0)
 #define ENGLISH (1)
@@ -6,104 +7,104 @@
 #define MATH_B (3)
 #define SOCIAL (4)
 #define SCIENCE (5)
-int32_t score[][6]={{9,8,0,5,12,0},
-{6,5,3,1,3,11},
-{1,2,3,13,8,14},
-{13,4,4,4,4,1},
-{11,15,7,8,7,6},
-{9,12,8,4,2,4},
-{8,0,12,6,11,14},
-{2,10,15,6,15,5},
-{11,11,13,2,14,14},
-{4,4,5,11,1,12},
-{10,9,14,9,6,5},
-{15,0,15,4,12,7},
-{13,11,12,13,4,10},
-{15,2,14,10,12,3},
-{4,2,13,15,12,15},
-{9,10,12,4,6,4},
-{4,7,15,4,7,0},
-{5,15,5,6,6,9},
-{15,1,15,0,13,1},
-{4,7,12,3,1,14},
-{3,12,5,2,7,5},
-{10,6,6,5,11,14},
-{4,3,3,7,8,7},
-{3,10,11,13,9,3},
-{11,0,14,14,14,7},
-{14,12,14,7,0,13},
-{2,9,13,1,13,2},
-{6,6,13,7,3,8},
-{7,4,14,9,2,8},
-{9,7,1,2,0,4},
-{13,8,6,8,6,3},
-{11,15,9,1,12,11},
-{12,15,7,13,11,1},
-{13,6,2,3,14,6},
-{13,12,6,4,12,3},
-{10,11,5,8,9,14},
-{15,1,5,5,11,7},
-{7,13,4,7,9,2},
-{12,7,2,9,2,1},
-{13,13,6,7,2,11},
-{2,7,13,15,11,8},
-{13,0,11,12,2,13},
-{5,13,7,5,10,10},
-{9,12,3,6,13,10},
-{4,0,1,4,0,1},
-{3,8,7,13,0,11},
-{1,13,9,4,11,5},
-{10,3,6,13,2,9},
-{12,15,10,10,2,13},
-{4,1,1,8,1,14},
-{4,9,10,13,9,4},
-{3,14,12,9,14,10},
-{2,5,13,2,4,6},
-{7,11,1,8,13,6},
-{8,1,11,2,6,4},
-{1,0,3,7,10,9},
-{1,3,0,6,14,14},
-{10,7,12,12,15,3},
-{14,5,0,2,2,3},
-{13,13,13,13,3,10},
-{3,6,11,9,15,12},
-{8,8,10,6,13,5},
-{9,1,2,8,8,13},
-{4,2,13,7,1,7},
-{3,14,9,5,10,10},
-{7,2,10,14,15,4},
-{12,12,0,7,3,11},
-{14,12,6,15,4,7},
-{15,14,8,14,3,7},
-{14,4,8,6,10,13},
-{5,2,3,15,6,7},
-{12,5,8,2,11,5},
-{10,10,3,9,8,4},
-{2,8,9,8,11,5},
-{7,6,8,0,12,1},
-{7,15,7,8,8,7},
-{2,5,6,10,10,5},
-{12,4,10,15,2,8},
-{12,5,14,11,9,7},
-{8,13,13,2,7,3},
-{3,6,7,9,8,4},
-{0,0,14,10,12,14},
-{12,6,14,2,3,5},
-{1,13,3,6,5,7},
-{11,7,6,11,1,1},
-{4,13,15,3,11,1},
-{11,9,15,2,1,8},
-{8,13,12,14,13,11},
-{12,8,5,11,12,7},
-{2,6,3,10,14,2},
-{0,2,4,0,11,15},
-{13,15,5,3,15,7},
-{11,8,9,0,3,1},
-{4,14,15,8,11,7},
-{7,2,9,12,5,9},
-{13,3,6,8,8,12},
-{12,6,4,11,14,12},
-{14,11,14,6,0,12},
-{4,1,14,11,11,1},
-{5,4,3,12,1,0},
+int32_t score[][6]={{14,5,6,14,6,15},
+{9,13,7,1,10,13},
+{11,10,5,8,8,5},
+{7,2,12,2,9,11},
+{11,14,11,11,5,1},
+{0,14,14,14,4,0},
+{8,11,0,9,3,12},
+{8,2,4,7,5,4},
+{6,13,6,4,8,9},
+{9,12,0,11,5,8},
+{6,11,10,5,3,15},
+{0,7,10,9,9,5},
+{2,4,0,14,14,12},
+{14,11,6,13,7,10},
+{8,2,0,12,3,1},
+{8,10,15,12,7,9},
+{6,7,5,2,9,12},
+{13,0,0,7,8,5},
+{2,12,7,6,9,14},
+{13,6,1,0,5,11},
+{8,10,8,9,12,3},
+{8,13,5,15,15,2},
+{5,1,2,9,3,4},
+{15,10,1,8,8,8},
+{15,12,13,4,15,7},
+{13,7,0,10,15,7},
+{4,3,3,8,2,2},
+{14,2,8,3,8,11},
+{5,2,8,10,2,2},
+{9,11,0,5,15,12},
+{1,1,4,6,6,14},
+{4,11,15,5,3,1},
+{12,8,0,1,12,15},
+{7,10,6,12,7,1},
+{13,10,7,4,2,11},
+{4,15,12,14,12,6},
+{1,8,8,7,11,3},
+{5,13,6,13,6,1},
+{5,5,10,4,6,8},
+{6,12,8,3,9,8},
+{15,1,10,14,10,13},
+{13,0,12,3,0,13},
+{1,13,2,5,0,15},
+{14,4,1,3,10,2},
+{12,3,14,9,4,3},
+{7,3,8,7,6,9},
+{0,11,3,1,5,7},
+{10,14,9,3,10,14},
+{2,8,4,11,14,11},
+{4,9,7,9,3,3},
+{9,14,2,3,3,5},
+{2,10,3,12,11,5},
+{11,15,4,14,5,14},
+{5,12,14,13,3,13},
+{1,2,7,11,3,5},
+{5,5,0,6,5,0},
+{5,7,12,2,7,10},
+{7,14,6,10,15,15},
+{4,12,2,0,9,0},
+{0,9,1,11,14,14},
+{13,5,9,4,12,6},
+{4,8,5,13,4,2},
+{10,10,14,3,13,14},
+{12,4,6,3,8,6},
+{3,5,2,15,4,15},
+{4,10,0,2,11,0},
+{14,5,1,6,3,12},
+{15,15,1,4,0,9},
+{3,10,2,15,15,12},
+{13,2,0,6,12,3},
+{15,15,11,13,12,7},
+{13,6,1,11,14,1},
+{13,4,1,9,6,13},
+{8,9,11,9,4,1},
+{15,7,11,5,5,3},
+{8,3,15,8,10,15},
+{0,1,1,9,5,3},
+{8,8,1,12,2,1},
+{14,3,3,12,0,12},
+{8,10,11,13,0,3},
+{11,1,9,2,3,11},
+{14,8,7,14,3,5},
+{14,11,8,14,8,10},
+{12,6,1,3,13,0},
+{4,2,10,1,2,4},
+{0,1,6,5,7,6},
+{12,7,6,2,14,1},
+{15,6,14,1,2,9},
+{13,12,3,3,5,11},
+{10,8,6,11,7,2},
+{0,13,1,6,14,14},
+{7,8,14,7,15,2},
+{1,1,6,9,5,1},
+{15,4,0,8,10,10},
+{10,7,8,12,9,11},
+{9,2,0,0,10,9},
+{0,1,5,15,1,1},
+{13,1,5,11,12,14},
+{0,5,4,5,0,11},
+{11,11,3,9,1,8},
 };
