--- a/test04/03/in/hw0403_02.in
+++ b/test04/03/in/hw0403_02.in
@@ -1,4 +1,5 @@
 #include <stdint.h>
+#pragma once
 #define STUDENT_NUMBER (100)
 #define CHINESE (0)
 #define ENGLISH (1)
@@ -6,104 +7,104 @@
 #define MATH_B (3)
 #define SOCIAL (4)
 #define SCIENCE (5)
-int32_t score[][6]={{4,6,5,15,12,1},
-{1,9,7,15,2,7},
-{6,3,12,8,0,10},
-{9,9,0,6,6,6},
-{6,15,15,4,4,1},
-{14,7,1,0,1,14},
-{10,4,5,15,3,13},
-{1,10,14,9,13,7},
-{10,13,6,12,6,1},
-{1,7,7,3,3,9},
-{1,12,0,8,8,4},
-{13,12,9,12,0,5},
-{9,11,1,12,0,3},
-{9,15,1,11,9,10},
-{2,10,5,2,6,14},
-{0,6,7,1,1,8},
-{3,15,11,7,15,1},
-{10,10,15,3,12,1},
-{9,15,12,1,14,11},
-{14,2,1,2,12,13},
-{10,1,8,5,1,8},
-{14,11,12,10,8,1},
-{13,12,6,12,7,7},
-{15,9,7,6,2,14},
-{15,5,11,13,1,10},
-{1,0,4,15,1,9},
-{9,3,4,2,4,4},
-{0,6,8,8,1,8},
-{9,1,14,10,10,1},
-{0,7,15,6,7,8},
-{3,8,10,13,2,3},
-{7,6,5,9,14,15},
-{8,8,7,11,7,5},
-{7,6,14,7,4,9},
-{2,5,1,10,0,5},
-{9,7,7,4,14,2},
-{6,9,15,11,14,12},
-{11,1,4,8,3,0},
-{6,15,6,9,14,7},
-{8,0,7,7,15,5},
-{11,8,2,0,15,7},
-{1,8,6,8,7,4},
-{6,15,9,13,5,8},
-{2,14,7,11,9,14},
-{2,15,5,4,11,6},
-{6,4,9,8,15,8},
-{8,4,12,8,4,10},
-{6,8,4,2,5,3},
-{6,1,6,12,15,11},
-{14,1,3,3,11,11},
-{2,4,15,8,4,12},
-{6,4,13,9,0,7},
-{7,2,7,8,1,11},
-{5,7,11,13,10,6},
-{10,11,11,6,7,9},
-{6,6,3,11,13,12},
-{14,2,2,11,9,5},
-{6,0,9,12,9,8},
-{12,1,2,12,0,9},
-{10,7,11,7,3,6},
-{0,0,13,5,13,13},
-{6,1,4,11,7,12},
-{10,11,5,0,4,4},
-{1,4,7,6,8,9},
-{6,3,3,8,13,2},
-{1,15,11,13,7,15},
-{3,5,10,13,3,15},
-{9,9,5,11,10,7},
-{5,13,13,3,7,0},
-{7,1,5,14,15,11},
-{11,0,3,8,8,0},
-{7,6,5,12,10,15},
-{13,14,7,15,1,12},
-{10,13,3,2,0,1},
-{10,9,2,9,10,3},
-{10,1,12,7,7,10},
-{12,15,14,9,2,15},
-{5,12,9,13,0,5},
-{13,8,3,0,11,11},
-{1,12,9,10,8,0},
-{7,5,8,14,13,13},
-{2,5,15,5,8,11},
-{14,8,6,8,6,0},
-{3,5,14,11,13,6},
-{12,11,0,14,8,12},
-{0,4,8,11,0,8},
-{2,15,5,12,14,9},
-{6,2,4,12,15,14},
-{15,9,4,11,13,3},
-{11,13,15,3,7,5},
-{7,3,11,9,1,6},
-{4,7,14,13,15,9},
-{10,3,2,3,1,9},
-{2,9,11,9,8,5},
-{4,11,13,12,1,5},
-{2,13,13,1,6,5},
-{4,11,5,1,3,1},
-{6,6,8,13,11,2},
-{10,4,11,15,8,10},
-{9,14,1,4,10,4},
+int32_t score[][6]={{14,11,10,8,6,13},
+{2,7,13,13,13,12},
+{5,6,10,3,8,0},
+{8,2,14,2,6,2},
+{13,12,12,12,3,0},
+{6,13,0,7,0,13},
+{12,9,12,8,15,5},
+{2,2,7,13,10,13},
+{2,3,5,6,12,12},
+{2,15,13,0,14,12},
+{8,15,4,8,1,9},
+{5,12,2,4,7,15},
+{5,9,6,3,5,11},
+{3,3,3,5,5,10},
+{6,15,15,5,8,15},
+{5,11,14,1,5,1},
+{11,11,6,1,13,2},
+{3,7,6,12,13,14},
+{8,1,0,7,2,9},
+{10,7,10,6,8,9},
+{3,14,14,1,10,7},
+{6,14,6,1,12,14},
+{5,2,10,12,9,2},
+{3,10,0,11,15,6},
+{11,11,7,8,0,6},
+{7,9,6,7,11,5},
+{7,2,1,4,15,6},
+{8,11,11,9,8,13},
+{10,2,9,7,9,11},
+{7,10,1,6,12,1},
+{15,8,15,7,12,12},
+{4,12,15,0,2,0},
+{1,2,13,10,15,4},
+{5,0,10,3,13,2},
+{4,2,14,15,14,3},
+{13,11,0,1,9,12},
+{8,7,6,13,7,0},
+{3,3,12,13,4,12},
+{1,12,13,4,1,8},
+{15,13,3,12,12,1},
+{4,9,0,12,7,15},
+{11,8,13,2,1,5},
+{14,7,0,9,14,13},
+{4,5,12,14,15,4},
+{1,9,0,0,3,12},
+{6,14,3,11,0,1},
+{3,2,1,13,9,14},
+{15,0,12,5,9,8},
+{15,6,11,8,3,10},
+{5,8,11,8,0,0},
+{1,2,14,10,13,1},
+{9,13,12,0,9,6},
+{5,2,0,8,7,14},
+{3,7,6,4,9,5},
+{9,2,5,6,13,6},
+{5,9,5,1,10,2},
+{3,8,14,6,7,9},
+{0,14,15,11,11,8},
+{6,0,13,8,11,11},
+{15,8,5,4,7,2},
+{2,7,15,9,1,1},
+{4,4,7,7,3,9},
+{12,1,5,14,7,6},
+{13,8,11,5,3,11},
+{12,12,0,9,8,11},
+{14,15,15,9,0,6},
+{13,9,3,10,13,2},
+{14,13,6,11,14,4},
+{13,3,15,11,6,10},
+{9,5,1,14,7,1},
+{13,8,9,2,8,13},
+{11,14,10,11,4,14},
+{3,1,2,5,14,11},
+{13,2,1,6,0,10},
+{11,5,6,12,0,9},
+{8,13,9,2,2,6},
+{15,3,11,12,8,0},
+{10,8,5,15,13,4},
+{9,2,7,11,2,3},
+{3,10,6,5,5,4},
+{6,0,1,13,5,11},
+{1,8,2,3,12,2},
+{0,8,11,4,12,3},
+{4,3,11,11,14,6},
+{11,8,13,7,12,5},
+{8,9,0,11,6,7},
+{2,1,3,1,3,10},
+{4,14,11,9,0,11},
+{4,8,6,0,8,6},
+{6,9,15,11,10,13},
+{14,7,11,1,12,10},
+{10,3,0,9,2,14},
+{11,13,5,9,4,5},
+{15,13,13,2,14,9},
+{0,12,8,13,6,8},
+{14,9,4,8,0,9},
+{12,11,2,7,2,0},
+{3,10,2,0,1,0},
+{2,14,6,1,3,6},
+{0,3,4,9,14,3},
 };
