--- a/test04/03/in/hw0403_03.in
+++ b/test04/03/in/hw0403_03.in
@@ -1,4 +1,5 @@
 #include <stdint.h>
+#pragma once
 #define STUDENT_NUMBER (100)
 #define CHINESE (0)
 #define ENGLISH (1)
@@ -6,104 +7,104 @@
 #define MATH_B (3)
 #define SOCIAL (4)
 #define SCIENCE (5)
-int32_t score[][6]={{3,0,15,13,3,10},
-{6,4,5,3,8,10},
-{9,1,14,7,8,5},
-{5,15,4,8,8,11},
-{0,10,2,6,12,9},
-{13,7,0,5,2,4},
-{9,0,14,6,2,4},
-{2,10,10,1,2,3},
-{2,9,9,4,5,14},
-{14,14,4,5,3,10},
-{7,5,13,3,7,3},
-{0,8,13,13,2,10},
-{4,0,3,3,0,1},
-{8,14,13,0,8,10},
-{9,11,13,2,9,14},
-{4,13,0,14,12,0},
-{10,3,2,11,6,14},
-{11,2,1,11,14,9},
-{8,3,3,1,13,1},
-{11,1,13,7,6,0},
-{15,1,12,1,7,12},
-{13,4,9,8,3,4},
-{11,9,15,4,10,15},
-{2,9,4,8,6,6},
-{14,5,2,15,7,11},
-{6,4,8,4,7,9},
-{8,13,4,14,15,8},
-{1,8,3,5,0,10},
-{9,13,14,5,4,10},
-{4,15,12,4,2,3},
-{15,8,7,7,5,13},
-{0,7,5,0,12,6},
-{14,8,13,3,13,6},
-{15,6,2,2,1,6},
-{7,4,11,6,14,9},
-{6,7,9,0,3,15},
-{11,4,6,8,0,8},
-{5,0,3,0,12,5},
-{0,1,14,12,0,4},
-{5,14,15,12,2,4},
-{3,8,2,10,1,10},
-{6,10,12,14,3,1},
-{14,10,15,11,1,5},
-{14,10,1,3,2,8},
-{5,15,12,3,5,8},
-{9,15,0,1,5,9},
-{3,10,5,11,1,4},
-{9,10,5,8,5,2},
-{14,8,11,1,0,12},
-{6,4,15,4,13,13},
-{2,5,8,10,4,13},
-{13,9,1,5,6,12},
-{14,8,12,11,6,2},
-{1,7,8,12,0,4},
-{7,7,1,10,0,12},
-{2,3,5,12,7,0},
-{14,10,0,3,2,7},
-{5,7,10,14,7,13},
-{4,7,4,4,10,5},
-{8,5,11,5,13,12},
-{4,1,3,12,3,1},
-{6,13,3,8,10,8},
-{9,11,8,0,10,11},
-{10,11,10,9,3,3},
-{0,2,5,7,15,14},
-{6,8,10,2,9,11},
-{6,9,7,5,4,1},
-{11,14,12,8,0,1},
-{10,12,12,12,9,11},
-{1,15,6,8,11,0},
-{8,13,9,10,15,2},
-{11,11,6,6,1,7},
-{7,2,3,7,10,14},
-{0,7,5,4,5,6},
-{3,12,2,5,12,11},
-{7,3,10,15,9,14},
-{2,7,10,8,8,2},
-{2,0,3,6,5,1},
-{10,15,14,3,12,1},
-{12,2,13,13,11,2},
-{15,3,1,15,4,12},
-{1,11,2,3,1,7},
-{0,9,11,10,13,8},
-{5,12,14,11,10,3},
-{15,4,11,7,6,4},
-{12,10,4,7,6,12},
-{12,13,11,2,7,14},
-{12,6,15,8,2,6},
-{11,8,8,0,2,5},
-{10,0,10,11,9,10},
-{7,12,10,6,7,7},
-{14,7,7,12,1,4},
-{4,6,13,12,9,7},
-{8,12,4,13,14,2},
-{2,0,15,7,2,5},
-{9,5,7,9,11,3},
-{1,14,6,8,7,7},
-{12,13,7,8,4,8},
-{15,1,2,5,15,12},
-{2,8,10,9,9,2},
+int32_t score[][6]={{5,1,12,3,5,10},
+{9,1,4,7,1,8},
+{11,5,15,11,13,4},
+{11,10,5,15,9,13},
+{8,4,4,6,10,12},
+{8,5,13,6,2,12},
+{14,11,11,10,14,10},
+{1,2,3,0,15,7},
+{13,1,14,5,11,7},
+{7,10,14,8,9,14},
+{0,13,3,9,10,2},
+{0,1,6,9,1,5},
+{0,5,10,8,10,1},
+{9,14,5,7,3,1},
+{6,12,6,9,5,9},
+{6,6,13,0,5,8},
+{11,8,0,4,14,10},
+{14,7,2,4,9,1},
+{4,6,11,12,7,2},
+{11,14,10,15,3,3},
+{8,0,2,6,1,10},
+{0,2,7,1,8,13},
+{12,13,9,12,11,0},
+{10,4,6,4,7,4},
+{2,4,3,7,2,10},
+{15,15,9,1,6,5},
+{0,0,9,15,13,7},
+{13,5,1,3,9,6},
+{9,7,3,15,0,15},
+{15,6,6,8,15,1},
+{5,11,14,10,2,14},
+{0,12,0,12,15,15},
+{14,15,14,14,0,3},
+{12,9,7,7,0,14},
+{12,14,12,13,15,6},
+{9,2,7,9,13,1},
+{4,14,1,1,5,11},
+{1,15,2,15,14,2},
+{7,2,3,12,9,10},
+{1,10,6,6,2,13},
+{5,11,14,2,3,3},
+{10,12,5,4,9,12},
+{13,7,2,7,6,2},
+{8,1,6,5,6,5},
+{14,0,15,5,8,4},
+{15,2,13,12,4,7},
+{13,3,11,12,8,12},
+{5,6,9,10,7,0},
+{1,10,7,14,3,6},
+{11,0,6,5,14,12},
+{14,8,1,2,0,0},
+{10,10,3,13,13,1},
+{6,13,9,5,8,4},
+{10,7,13,2,5,3},
+{2,0,4,10,6,0},
+{12,5,13,9,0,5},
+{0,13,3,6,0,7},
+{10,12,1,2,11,0},
+{13,1,7,0,2,1},
+{7,15,13,15,9,15},
+{3,7,10,5,8,2},
+{1,15,8,2,1,10},
+{8,1,3,2,8,14},
+{6,2,6,8,15,11},
+{13,3,5,15,13,10},
+{15,10,8,11,4,4},
+{9,1,6,7,5,7},
+{4,12,14,6,1,4},
+{8,5,14,9,8,15},
+{12,9,6,9,13,15},
+{15,12,15,12,3,5},
+{0,6,4,3,2,5},
+{0,12,15,6,9,12},
+{11,2,9,5,0,14},
+{3,8,6,14,6,12},
+{3,2,2,14,14,1},
+{8,7,0,15,3,0},
+{5,9,9,3,14,15},
+{3,14,8,0,9,5},
+{12,13,1,10,15,7},
+{4,8,10,13,10,5},
+{9,15,8,7,13,15},
+{2,1,5,8,0,9},
+{15,10,11,6,10,10},
+{2,2,1,4,9,14},
+{7,11,1,7,10,2},
+{7,8,2,1,13,7},
+{3,10,8,1,15,2},
+{11,0,10,5,12,13},
+{9,9,12,4,8,11},
+{8,3,11,4,4,4},
+{12,11,8,7,9,13},
+{6,12,14,3,14,9},
+{13,8,8,9,2,9},
+{1,2,7,1,3,3},
+{1,3,3,4,8,12},
+{9,7,1,12,15,2},
+{13,0,5,3,2,3},
+{4,4,5,3,9,4},
+{1,13,13,11,14,12},
 };
