--- a/test04/03/in/hw0403_04.in
+++ b/test04/03/in/hw0403_04.in
@@ -1,4 +1,5 @@
 #include <stdint.h>
+#pragma once
 #define STUDENT_NUMBER (100)
 #define CHINESE (0)
 #define ENGLISH (1)
@@ -6,104 +7,104 @@
 #define MATH_B (3)
 #define SOCIAL (4)
 #define SCIENCE (5)
-int32_t score[][6]={{4,9,9,9,0,4},
-{15,9,6,9,8,2},
-{9,12,5,3,10,3},
-{11,14,15,3,9,2},
-{4,11,15,10,11,15},
-{3,10,9,1,8,4},
-{8,8,4,12,6,8},
-{10,3,2,15,4,9},
-{15,6,5,10,10,14},
-{4,7,5,4,9,2},
-{8,4,12,9,8,14},
-{7,2,4,5,1,7},
-{0,2,7,7,14,8},
-{0,2,6,6,7,0},
-{2,11,5,0,8,8},
-{13,8,5,4,13,3},
-{1,13,12,7,0,3},
-{5,9,14,1,14,9},
-{8,12,14,11,9,3},
-{4,12,8,7,8,12},
-{7,0,9,5,1,4},
-{0,15,9,13,1,3},
-{15,0,5,7,4,0},
-{4,9,10,0,15,8},
-{3,2,1,13,9,2},
-{5,8,3,5,11,8},
-{9,6,6,6,1,15},
-{13,3,0,1,10,2},
-{5,6,5,10,2,5},
-{12,6,14,0,2,0},
-{10,15,4,6,9,8},
-{14,15,13,2,15,10},
-{3,11,8,8,5,7},
-{12,8,13,9,9,15},
-{5,0,5,2,5,7},
-{9,2,15,2,7,1},
-{4,9,5,9,5,15},
-{15,12,1,12,6,15},
-{6,2,12,7,10,6},
-{13,5,11,10,1,0},
-{0,3,13,6,14,14},
-{13,11,6,7,3,3},
-{15,13,15,12,2,10},
-{9,8,6,1,6,3},
-{8,0,0,15,9,6},
-{14,6,11,12,10,2},
-{6,9,9,11,2,15},
-{1,12,9,7,8,15},
-{4,8,2,4,13,3},
-{14,12,11,1,12,15},
-{4,4,6,14,5,9},
-{4,3,7,13,4,5},
-{1,12,3,14,11,0},
-{5,0,10,5,6,10},
-{0,7,1,13,13,1},
-{8,3,0,4,15,5},
-{9,9,5,14,0,5},
-{0,10,14,14,0,11},
-{3,6,9,11,3,15},
-{7,1,12,2,9,1},
-{15,0,13,11,2,6},
-{1,0,3,2,15,15},
-{11,11,13,10,12,13},
-{10,6,5,11,4,8},
-{2,13,9,15,10,11},
-{13,2,5,3,0,12},
-{8,1,10,4,1,15},
-{10,2,3,8,11,6},
-{15,15,4,6,9,6},
-{13,6,7,10,4,14},
-{5,6,15,11,5,11},
-{10,11,15,10,12,4},
-{3,14,9,1,13,1},
-{5,10,4,10,0,13},
-{4,0,15,10,5,12},
-{5,1,12,4,7,3},
-{9,10,9,10,13,9},
-{0,1,1,1,9,2},
-{15,9,13,4,5,2},
-{5,8,7,4,0,2},
-{1,10,7,9,12,6},
-{3,7,15,6,5,15},
-{6,13,1,14,2,5},
-{7,15,14,13,0,9},
-{8,14,11,8,11,14},
-{5,9,11,1,4,6},
-{4,0,4,6,6,7},
-{12,4,8,9,7,10},
-{11,7,10,7,12,10},
-{9,12,6,4,5,8},
-{11,12,8,2,0,10},
-{2,11,8,15,2,10},
-{6,3,10,4,6,11},
-{13,10,8,11,4,5},
-{12,13,6,7,3,13},
-{3,0,4,14,9,8},
-{11,11,12,10,14,4},
-{15,9,11,5,2,13},
-{11,3,2,7,9,14},
-{10,9,2,7,5,3},
+int32_t score[][6]={{11,11,1,14,11,6},
+{9,15,8,9,0,15},
+{0,13,14,2,8,8},
+{1,4,12,14,4,12},
+{9,1,1,10,6,8},
+{6,3,9,2,10,8},
+{15,4,1,9,15,6},
+{12,6,11,9,8,15},
+{13,11,6,10,2,1},
+{2,12,14,6,9,9},
+{5,8,10,7,3,3},
+{1,6,4,4,14,2},
+{14,10,14,1,4,3},
+{15,0,12,11,3,5},
+{7,11,7,12,0,3},
+{13,14,10,8,15,3},
+{3,1,3,9,13,15},
+{1,14,3,8,2,7},
+{13,10,8,8,1,7},
+{1,13,0,8,9,1},
+{10,2,0,8,5,8},
+{12,1,7,4,0,1},
+{14,7,4,12,3,10},
+{12,5,6,1,6,1},
+{6,1,5,11,0,4},
+{7,12,13,13,11,2},
+{12,6,14,9,10,0},
+{14,3,7,2,3,15},
+{14,12,0,15,13,6},
+{3,0,8,4,5,13},
+{9,5,5,0,15,7},
+{7,14,7,7,15,15},
+{7,9,1,12,14,12},
+{5,8,7,2,7,5},
+{14,5,4,0,7,4},
+{2,14,9,15,1,1},
+{5,7,2,3,13,15},
+{6,2,9,5,7,9},
+{0,1,11,6,2,2},
+{11,13,6,10,8,11},
+{12,8,0,12,7,9},
+{1,3,8,8,5,5},
+{12,10,12,12,14,7},
+{4,11,6,1,0,9},
+{5,3,2,13,14,11},
+{13,0,1,14,10,4},
+{5,10,5,4,13,10},
+{12,7,7,4,11,4},
+{15,6,4,13,1,9},
+{7,14,13,9,15,13},
+{10,7,15,15,10,15},
+{1,1,3,10,1,10},
+{7,11,3,6,3,13},
+{13,12,3,0,3,1},
+{13,1,10,10,7,2},
+{1,5,2,6,2,2},
+{2,9,0,2,6,7},
+{7,8,4,1,12,15},
+{1,3,9,8,15,1},
+{3,7,14,5,0,0},
+{14,8,14,10,11,15},
+{15,7,0,11,3,4},
+{11,4,12,14,7,11},
+{8,13,1,13,8,11},
+{11,8,9,15,14,12},
+{4,13,9,12,9,11},
+{11,13,11,8,14,13},
+{1,9,9,10,4,12},
+{5,10,13,0,12,1},
+{3,7,15,15,0,4},
+{4,6,4,5,9,13},
+{9,6,7,15,13,2},
+{1,11,2,4,7,12},
+{5,15,9,9,1,7},
+{13,11,10,8,8,0},
+{2,13,12,2,2,6},
+{3,14,6,13,0,13},
+{13,15,7,7,9,15},
+{8,5,13,1,13,1},
+{6,12,0,4,4,14},
+{11,2,10,6,13,4},
+{10,0,1,14,5,7},
+{5,15,1,4,15,3},
+{7,9,12,15,2,7},
+{0,9,10,15,9,12},
+{2,7,0,12,6,1},
+{6,11,5,14,4,8},
+{13,13,11,6,9,12},
+{8,14,13,7,11,6},
+{3,3,6,13,13,10},
+{4,15,9,15,12,12},
+{2,9,10,1,6,13},
+{12,1,12,4,15,12},
+{14,7,10,11,4,14},
+{12,1,4,8,9,0},
+{12,3,13,4,10,10},
+{6,5,10,4,4,13},
+{15,5,11,9,1,7},
+{6,1,3,9,10,15},
+{3,9,1,9,14,6},
 };
