--- a/test04/03/in/hw0403_05.in
+++ b/test04/03/in/hw0403_05.in
@@ -1,69 +1,26 @@
 #include <stdint.h>
-#define STUDENT_NUMBER (60)
+#pragma once
+#define STUDENT_NUMBER (16)
 #define CHINESE (0)
 #define ENGLISH (1)
 #define MATH_A (2)
 #define MATH_B (3)
 #define SOCIAL (4)
 #define SCIENCE (5)
-int32_t score[][6]={{0,8,8,2,0,12},
-{8,6,9,8,11,11},
-{14,0,9,9,9,13},
-{7,1,9,11,7,9},
-{2,5,6,5,10,5},
-{9,12,7,3,9,5},
-{6,12,2,12,0,0},
-{3,9,15,8,2,14},
-{14,1,5,6,1,13},
-{10,6,8,11,8,14},
-{5,10,0,15,2,15},
-{7,8,14,2,13,3},
-{15,9,3,11,2,6},
-{14,11,9,14,3,10},
-{6,4,1,8,7,15},
-{7,8,3,5,12,0},
-{15,5,2,11,12,4},
-{8,7,11,9,8,7},
-{3,14,8,5,6,1},
-{2,3,0,5,13,3},
-{8,15,6,9,15,14},
-{13,5,6,12,1,6},
-{0,1,9,4,10,14},
-{9,2,8,9,4,6},
-{12,6,7,9,10,12},
-{8,11,13,11,14,10},
-{11,12,9,15,15,15},
-{9,3,8,11,9,3},
-{4,12,7,1,0,5},
-{6,0,12,11,0,3},
-{8,15,14,0,8,0},
-{4,4,15,2,10,11},
-{2,15,1,4,1,4},
-{4,5,13,9,9,8},
-{1,5,0,8,11,0},
-{14,15,14,8,8,15},
-{2,13,6,3,10,9},
-{6,2,3,14,9,8},
-{15,5,1,10,5,8},
-{4,15,2,7,7,2},
-{13,2,8,14,10,4},
-{2,1,15,10,5,9},
-{8,10,9,8,11,11},
-{15,2,14,13,4,6},
-{15,15,14,14,3,7},
-{3,11,11,1,15,4},
-{6,0,9,15,6,8},
-{11,14,9,4,0,0},
-{12,2,2,1,14,1},
-{8,10,5,2,14,14},
-{12,3,7,15,7,1},
-{3,2,3,8,2,7},
-{2,3,10,0,2,14},
-{13,8,1,0,2,10},
-{0,4,14,10,1,14},
-{10,5,3,5,6,10},
-{13,0,5,4,10,15},
-{7,4,14,12,11,5},
-{12,6,4,8,0,15},
-{5,5,2,1,13,12},
+int32_t score[][6]={{9,14,4,14,10,6},
+{14,6,6,8,7,6},
+{5,4,14,14,13,7},
+{13,1,7,6,8,7},
+{0,13,8,1,11,11},
+{15,4,3,1,10,14},
+{11,2,11,7,7,13},
+{1,14,8,5,12,0},
+{8,9,9,4,9,13},
+{13,5,7,9,15,1},
+{12,14,15,5,9,13},
+{6,15,11,3,8,10},
+{13,7,7,2,14,5},
+{8,5,7,3,7,5},
+{8,14,1,10,9,1},
+{6,15,7,11,15,1},
 };
